[project]
name = "ai-research-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.48.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.6",
    "python-dotenv>=0.9.9",
    "requests>=2.32.5",
    "arxiv>=2.1.0",
    "pypdf>=4.0.0",
]
